// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Throughline render goldens > Generate-Unit button is disabled in a live class session (hard block) 1`] = `
{
  "buttons": 11,
  "inputs": 1,
  "lengthBucket": 26,
  "sha": "a731dd1b8e6b3d91",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > Generate-Unit capability wired → toolbar shows the ✨ button 1`] = `
{
  "buttons": 11,
  "inputs": 1,
  "lengthBucket": 26,
  "sha": "1b0016ed5b7e1f66",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > host-wired empty (history + currentLesson + onOpenLesson) 1`] = `
{
  "buttons": 10,
  "inputs": 1,
  "lengthBucket": 25,
  "sha": "c157d908b7deb72e",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > manual mode (5 props, empty) — empty state + manual-import hint 1`] = `
{
  "buttons": 9,
  "inputs": 1,
  "lengthBucket": 23,
  "sha": "af05f2847d8903f5",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > populated unit (seeded localStorage + matching history) — cards + edges 1`] = `
{
  "buttons": 15,
  "inputs": 1,
  "lengthBucket": 38,
  "sha": "60836088157c6494",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > populated unit tolerates a dangling lessonId without crashing (normalize guard) 1`] = `
{
  "buttons": 17,
  "inputs": 1,
  "lengthBucket": 45,
  "sha": "ce729243d8c96a15",
  "svgs": 1,
  "textareas": 0,
}
`;

exports[`Throughline render goldens > units-aware empty (history with unitId + units prop) 1`] = `
{
  "buttons": 10,
  "inputs": 1,
  "lengthBucket": 25,
  "sha": "c157d908b7deb72e",
  "svgs": 1,
  "textareas": 0,
}
`;
